--- a/3.html
+++ b/3.html
@@ -21,5 +21,28 @@
 Revisited through a myriad of patterns and color palettes, the Dior Saddle bag has become one of the essential pieces of Maria Grazia Chiuri's collections.<br><br>
 <img src="saddlebag.webp" width="45%"><br>
 <p>Maria Grazia Chiuri brings a <a href="https://saclab.com/a-deep-dive-into-the-dior-saddle-bag/" target="_blank" title="The article-A Deep Dive Into the Dior Saddle Bag"> fresh update</a> to the iconic Saddle bag. Crafted in black grained calfskin, the legendary design features a Saddle flap with a magnetic 'D' stirrup clasp, as well as an antique gold-finish metal <strong>'CD'</strong> signature on either side of the strap.</p>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/3czbq1MASw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-ydyh510xjm.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
