--- a/1.html
+++ b/1.html
@@ -22,5 +22,28 @@ The Lady Dior handbag is a House classic defined by its Cannage topstitching, 'D
 <img src="diorlady.jpg" width="50%"><br>
 <br><strong>LADY DIOR, A TRUE STYLE ICON</strong><br>
 <p>Equal parts symbol and legend, the Lady Dior made its début on <a href="https://www.lifestyleasia.com/kl/style/fashion/the-story-behind-princess-of-wales-lady-diana-and-the-lady-dior-handbag/" target="_blank" title="The story behind her favourite iconic handbag">Lady Diana’s arm</a>, launching from there into its extraordinary destiny. An architectural homage to the House’s excellence, this iconic cannage creation reinvents itself through the collections in a multitude of colors, sizes, and ever-exceptional materials.</p>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/PS78866qStM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-ydyh510xjm.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
