--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
 <head>
 <title>Dior-Bag-Caro</title>
 <meta charset="utf-8">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV6E17PBE"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-8SV6E17PBE');
+</script>
 </head>
 <body>
 <h1><a href="index.html">Dior Handbag</a></h1>
