--- a/3.html
+++ b/3.html
@@ -12,9 +12,13 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
+<style>
+a {color:blue;
+text-decoration: none;}
+</style>
 </head>
 <body>
-<h1><a href="index.html">Dior Handbag</a></h1>
+<h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
 <ol>
   <li><a href="1.html">Lady Dior</a></li>
   <li><a href="2.html">Dior Caro</a></li>
@@ -29,7 +33,7 @@ gtag('config', 'G-8SV6E17PBE');
 <h2>Saddle 디올 새들백</h2>
 Revisited through a myriad of patterns and color palettes, the Dior Saddle bag has become one of the essential pieces of Maria Grazia Chiuri's collections.<br><br>
 <img src="saddlebag.webp" width="45%"><br>
-<p>Maria Grazia Chiuri brings a <a href="https://saclab.com/a-deep-dive-into-the-dior-saddle-bag/" target="_blank" title="The article-A Deep Dive Into the Dior Saddle Bag"> fresh update</a> to the iconic Saddle bag. Crafted in black grained calfskin, the legendary design features a Saddle flap with a magnetic 'D' stirrup clasp, as well as an antique gold-finish metal <strong>'CD'</strong> signature on either side of the strap.</p>
+<p>Maria Grazia Chiuri brings a <a href="https://saclab.com/a-deep-dive-into-the-dior-saddle-bag/" target="_blank" title="The article-A Deep Dive Into the Dior Saddle Bag" style="text-decoration: underline"> fresh update</a> to the iconic Saddle bag. Crafted in black grained calfskin, the legendary design features a Saddle flap with a magnetic 'D' stirrup clasp, as well as an antique gold-finish metal <strong>'CD'</strong> signature on either side of the strap.</p>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3czbq1MASw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
