--- a/1.html
+++ b/1.html
@@ -12,9 +12,13 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
+<style>
+a {color:blue;
+text-decoration: none;}
+</style>
 </head>
 <body>
-<h1><a href="index.html">Dior Handbag</a></h1>
+<h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
 <ol>
   <li><a href="1.html">Lady Dior</a></li>
   <li><a href="2.html">Dior Caro</a></li>
@@ -30,7 +34,7 @@ gtag('config', 'G-8SV6E17PBE');
 The Lady Dior handbag is a House classic defined by its Cannage topstitching, 'D.I.O.R.' charm and structured silhouette. The signature design is revisited every season by <strong>Creative Director <u>Maria Grazia Chiuri</u></strong>, with the collection offering a myriad of silhouettes, materials and palettes.<br><br>
 <img src="diorlady.jpg" width="50%"><br>
 <br><strong>LADY DIOR, A TRUE STYLE ICON</strong><br>
-<p>Equal parts symbol and legend, the Lady Dior made its début on <a href="https://www.lifestyleasia.com/kl/style/fashion/the-story-behind-princess-of-wales-lady-diana-and-the-lady-dior-handbag/" target="_blank" title="The story behind her favourite iconic handbag">Lady Diana’s arm</a>, launching from there into its extraordinary destiny. An architectural homage to the House’s excellence, this iconic cannage creation reinvents itself through the collections in a multitude of colors, sizes, and ever-exceptional materials.</p>
+<p>Equal parts symbol and legend, the Lady Dior made its début on <a href="https://www.lifestyleasia.com/kl/style/fashion/the-story-behind-princess-of-wales-lady-diana-and-the-lady-dior-handbag/" target="_blank" title="The story behind her favourite iconic handbag" style="text-decoration: underline">Lady Diana’s arm</a>, launching from there into its extraordinary destiny. An architectural homage to the House’s excellence, this iconic cannage creation reinvents itself through the collections in a multitude of colors, sizes, and ever-exceptional materials.</p>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/PS78866qStM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
