--- a/index.html
+++ b/index.html
@@ -12,8 +12,28 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
+<style>
+a {color:blue;
+text-decoration: none;}
+h1 {font-size: 45px;
+text-align: center;}
+.saw {color:grey;}
+</style>
 </head>
 <body>
+<h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
+<ol>
+  <li><a href="1.html" class="saw">Lady Dior</a></li>
+  <li><a href="2.html" class="saw">Dior Caro</a></li>
+  <li>Dior Bobby East-West</li>
+  <li>Dior Essential</li>
+  <li><a href="3.html">Saddle</a></li>
+  <li>Lady D-Joy</li>
+  <li>Dior Vibe</li>
+  <li>Dior Book Tote</li>
+  <li>Dior D-Lite</li>
+</ol>
+<!--
 <h1><a href="index.html">Dior Handbag</a></h1>
 <ol>
   <li><a href="1.html">Lady Dior</a></li>
@@ -26,6 +46,7 @@ gtag('config', 'G-8SV6E17PBE');
   <li>Dior Book Tote</li>
   <li>Dior D-Lite</li>
 </ol>
+-->
 <h2>Luxury Designer Handbags for Women</h2>
 Designed to be essential in every woman's collection, Dior Women's designer bags combine the vision of Maria Grazia Chiuri with the timeless elegance of the House.<br><br>
 <img src="christiandior.jpg" width="50%">
