--- a/2.html
+++ b/2.html
@@ -15,10 +15,30 @@ gtag('config', 'G-8SV6E17PBE');
 <style>
 a {color:blue;
 text-decoration: none;}
+h1 {font-size: 45px;
+text-align: center;
+border-bottom: 3px solid black;
+padding:10px;
+margin-bottom:0;
+}
+ol {font-size: 18px;
+  border-right: 2px solid black;
+width:180px;
+margin-top: 0;
+padding: 30px;
+padding-top: 11px;
+}
+#grid {display: grid;
+grid-template-columns: 1fr 5fr;}
+@media(max-width: 800px){
+  #grid {
+  display: block;}
+}
 </style>
 </head>
 <body>
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
+<div id="grid">
 <ol>
   <li><a href="1.html">Lady Dior</a></li>
   <li><a href="2.html">Dior Caro</a></li>
@@ -30,6 +50,7 @@ text-decoration: none;}
   <li>Dior Book Tote</li>
   <li>Dior D-Lite</li>
 </ol>
+<div>
 <h2>Dior Caro 디올 카로백</h2>
 The Dior Caro bag combines modernity with timeless elegance. The design is crafted in black calfskin with Cannage stitching. The supple bag features a flap adorned with an antique gold-finish metal <strong>'CD'</strong> twist clasp, inspired by the seal of a Christian Dior perfume bottle.<br><br>
 <img src="diorcaro.webp" width="45%"><br>
@@ -39,6 +60,8 @@ The Dior Caro bag combines modernity with timeless elegance. The design is craft
   <iframe width="560" height="315" src="https://www.youtube.com/embed/sbqRrScacUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </P>
 <p>
+</div>
+</div>
   <div id="disqus_thread"></div>
 <script>
     /**
