--- a/3.html
+++ b/3.html
@@ -15,10 +15,30 @@ gtag('config', 'G-8SV6E17PBE');
 <style>
 a {color:blue;
 text-decoration: none;}
+h1 {font-size: 45px;
+text-align: center;
+border-bottom: 3px solid black;
+padding:10px;
+margin-bottom:0;
+}
+ol {font-size: 18px;
+  border-right: 2px solid black;
+width:180px;
+margin-top: 0;
+padding: 30px;
+padding-top: 11px;
+}
+#grid {display: grid;
+grid-template-columns: 1fr 5fr;}
+@media(max-width: 800px){
+  #grid {
+  display: block;}
+}
 </style>
 </head>
 <body>
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
+<div id="grid">
 <ol>
   <li><a href="1.html">Lady Dior</a></li>
   <li><a href="2.html">Dior Caro</a></li>
@@ -30,6 +50,7 @@ text-decoration: none;}
   <li>Dior Book Tote</li>
   <li>Dior D-Lite</li>
 </ol>
+<div>
 <h2>Saddle 디올 새들백</h2>
 Revisited through a myriad of patterns and color palettes, the Dior Saddle bag has become one of the essential pieces of Maria Grazia Chiuri's collections.<br><br>
 <img src="saddlebag.webp" width="45%"><br>
@@ -37,6 +58,8 @@ Revisited through a myriad of patterns and color palettes, the Dior Saddle bag h
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3czbq1MASw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
+</div>
+</div>
 <p>
   <div id="disqus_thread"></div>
 <script>
