--- a/4.html
+++ b/4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Dior-Bag</title>
+<title>Dior-Bag-Lady D-Joy</title>
 <meta charset="utf-8">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV6E17PBE"></script>
@@ -29,12 +29,19 @@ gtag('config', 'G-8SV6E17PBE');
   <li>Dior D-Lite</li>
 </ol>
 <div>
-<h2>Luxury Designer Handbags for Women</h2>
-Designed to be essential in every woman's collection, Dior Women's designer bags combine the vision of Maria Grazia Chiuri with the timeless elegance of the House.<br><br>
-<img src="christiandior.jpg" width="50%">
-<P>
+<h2>Dior Lady D-Joy 디올 레이디 디조이백</h2>
+Dior reveals the new versions of the Lady D-Joy bag, reinterpreting in <strong>a horizontal format</strong> the Lady Dior, an icon of the House symbolically associated with Lady Diana.<br><br>
+<img src="djoy.webp" width="45%"><br>
+<p>The Lady D-Joy bag captures the House's vision of elegance and beauty. Refined and sleek, this timeless style showcases the iconic streamlined aesthetic of <a href="https://www.marieclaire.com.au/dior-lady-d-joy-bag-princess-diana" target="_blank" title="The article-Dior Has Given Their Fashion Homage To Princess Diana, The 'Lady Dior', A Royal Upgrade">the Lady Dior line</a>. Crafted in black lambskin with Cannage stitching, it is enhanced by pale gold-finish metal 'D.I.O.R.' charms embellishing its silhouette.</p>
+<strong>Lady D-Joy Bag-Black Cannage Calfskin with Diamond Motif</strong><br>
+<p> From the meticulous cutting out of the calfskin leather parts to the stitching of the <strong>'Diamond Cannage'</strong> graphic motif and the application of the tonal metal 'D.I.O.R.' lucky charms, watch as the petites mains bring it to life in the Dior Ateliers in Italy.</p>
+<img src="diamondcannage.jpg.crdownload" width="45%"><br>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/cJF1eWNQTYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 </div>
 </div>
+<p>
   <div id="disqus_thread"></div>
 <script>
     /**
@@ -54,19 +61,5 @@ Designed to be essential in every woman's collection, Dior Women's designer bags
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6345093a37898912e96df4e5/1gf2qo3db';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
 </body>
 </html>
