--- a/2.html
+++ b/2.html
@@ -12,29 +12,7 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
-<style>
-a {color:blue;
-text-decoration: none;}
-h1 {font-size: 45px;
-text-align: center;
-border-bottom: 3px solid black;
-padding:10px;
-margin-bottom:0;
-}
-ol {font-size: 18px;
-  border-right: 2px solid black;
-width:180px;
-margin-top: 0;
-padding: 30px;
-padding-top: 11px;
-}
-#grid {display: grid;
-grid-template-columns: 1fr 5fr;}
-@media(max-width: 800px){
-  #grid {
-  display: block;}
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
@@ -45,7 +23,7 @@ grid-template-columns: 1fr 5fr;}
   <li>Dior Bobby East-West</li>
   <li>Dior Essential</li>
   <li><a href="3.html">Saddle</a></li>
-  <li>Lady D-Joy</li>
+  <li><a href="4.html">Lady D-Joy</a></li>
   <li>Dior Vibe</li>
   <li>Dior Book Tote</li>
   <li>Dior D-Lite</li>
