--- a/4.html
+++ b/4.html
@@ -35,7 +35,7 @@ Dior reveals the new versions of the Lady D-Joy bag, reinterpreting in <strong>a
 <p>The Lady D-Joy bag captures the House's vision of elegance and beauty. Refined and sleek, this timeless style showcases the iconic streamlined aesthetic of <a href="https://www.marieclaire.com.au/dior-lady-d-joy-bag-princess-diana" target="_blank" title="The article-Dior Has Given Their Fashion Homage To Princess Diana, The 'Lady Dior', A Royal Upgrade">the Lady Dior line</a>. Crafted in black lambskin with Cannage stitching, it is enhanced by pale gold-finish metal 'D.I.O.R.' charms embellishing its silhouette.</p>
 <strong>Lady D-Joy Bag-Black Cannage Calfskin with Diamond Motif</strong><br>
 <p> From the meticulous cutting out of the calfskin leather parts to the stitching of the <strong>'Diamond Cannage'</strong> graphic motif and the application of the tonal metal 'D.I.O.R.' lucky charms, watch as the petites mains bring it to life in the Dior Ateliers in Italy.</p>
-<img src="diamondcannage.jpg.crdownload" width="45%"><br>
+<img src="diamondcannage.jpg" width="45%"><br>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/cJF1eWNQTYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
