--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ gtag('config', 'G-8SV6E17PBE');
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <input type="button" value="night" onclick="
+document.querySelector('body').style.backgroundColor='black';
+document.querySelector('body').style.color='white';">
+<input type="button" value="day" onclick="
+document.querySelector('body').style.backgroundColor='white';
+document.querySelector('body').style.color='black';">
+
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
 <div id="grid">
 <ol>
