--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@ gtag('config', 'G-8SV6E17PBE');
 </head>
 <body>
   <input type="button" value="night" onclick="
-document.querySelector('body').style.backgroundColor='black';
-document.querySelector('body').style.color='white';">
-<input type="button" value="day" onclick="
-document.querySelector('body').style.backgroundColor='white';
-document.querySelector('body').style.color='black';">
-
+  if(this.value === 'night')
+  {document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').style.color='white';
+  this.value = 'day';}
+  else
+  {document.querySelector('body').style.backgroundColor='white';
+  document.querySelector('body').style.color='black';
+  this.value = 'night';}
+  ">
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
 <div id="grid">
 <ol>
