--- a/3.html
+++ b/3.html
@@ -12,9 +12,14 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
+<script src="colors.js">
+</script>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <input type="button" value="night" onclick="
+  nightdayhandler(this);
+  ">
 <h1><a href="index.html" style="color:black">Dior Handbag</a></h1>
 <div id="grid">
 <ol>
