--- a/index.html
+++ b/index.html
@@ -12,41 +12,7 @@ gtag('js', new Date());
 
 gtag('config', 'G-8SV6E17PBE');
 </script>
-<script>
-function LinkSetColor(color){
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-      alist[i].style.color = color;
-      i = i + 1;
-  }
-}
-function BodySetColor(color){
-  document.querySelector('body').style.color=color;
-}
-function BodySetBackgroundColor(color){
-  document.querySelector('body').style.backgroundColor=color;
-}
-function nightdayhandler(self){
-  var target = document.querySelector('body')
-if(self.value === 'night')
-{BodySetBackgroundColor('black');
-BodySetColor('white');
-self.value = 'day';
-LinkSetColor('gray');
-}
-else
-{BodySetBackgroundColor('white');
-BodySetColor('black');
-self.value = 'night';
-LinkSetColor('blue');
-
-var alist = document.querySelectorAll('a');
-var i = 0;
-while(i < alist.length){
-    alist[0].style.color = 'black';
-    i = i + 1;
-}}}
+<script src="colors.js">
 </script>
 <link rel="stylesheet" href="style.css">
 </head>
